--- a/public/index.html
+++ b/public/index.html
@@ -18,17 +18,23 @@
       <h1 class="text-3xl font-extrabold text-indigo-600 mb-2">
         Flowave Sign-In
       </h1>
-      <p class="text-gray-500 text-base mb-8">
-        Open the Flowave app on your phone, go to <strong>Sign in with QR</strong>,
-        and scan the code below to continue.
+      <p id="instruction" class="text-gray-500 text-base mb-8">
+        <!-- Instruction loaded dynamically -->
       </p>
 
       <div
         id="qrContainer"
-        class="bg-white p-5 rounded-2xl shadow-md flex items-center justify-center"
+        class="hidden bg-white p-5 rounded-2xl shadow-md flex items-center justify-center"
       >
         <!-- QR will be inserted here dynamically -->
       </div>
+
+      <button
+        id="openApp"
+        class="hidden mt-2 px-4 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-700 transition-colors"
+      >
+        Open Flowave App
+      </button>
 
       <p id="status" class="mt-6 text-gray-400 text-sm italic"></p>
     </main>
@@ -37,6 +43,6 @@
       <p>Flowave — Secure sign-in made simple.</p>
     </footer>
 
-    <script src="app.js"></script>
+    <script type="module" src="app.js"></script>
   </body>
 </html>
